# lares

./: .gitignore  Cargo.toml  README.md
crates/lares-cli/: Cargo.toml
crates/lares-cli/src/: main.rs
crates/lares-core/: Cargo.toml
crates/lares-core/src/: agent.rs  approval.rs  config.rs  context.rs  executor.rs  lib.rs  llm.rs  nix_tier.rs  task.rs
crates/lares-core/src/init/: mod.rs  templates.rs
crates/lares-protocol/: Cargo.toml
crates/lares-protocol/src/: types.rs
crates/laresd/: Cargo.toml
crates/laresd/src/: main.rs
docs/: agent-design.md  architecture.md  config.md  development.md  getting-started.md  goals.md  installation.md  nix-strategy.md  protocol.md  security.md  task-model.md
modules/darwin/: homebrew.nix
service/: INSTALL.txt  README.md  TROUBLESHOOTING.md  USAGE.txt  ai.lares.daemon.plist  install.sh  lares.service  restart.sh  start.sh  status.sh  stop.sh  uninstall.sh
