[package]
name = "lares-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lares"
path = "src/main.rs"

[dependencies]
lares-core = { path = "../lares-core" }
lares-protocol = { path = "../lares-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
libc = "0.2"
