[package]
name = "lares-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lares-protocol = { path = "../lares-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
dirs = "6"
libc = "0.2"
async-trait = "0.1"
hostname = "0.4"
