[package]
name = "laresd"
version = "0.1.0"
edition = "2021"

[dependencies]
lares-protocol = { path = "../lares-protocol" }
lares-core = { path = "../lares-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
async-trait = "0.1"
