[package]
name = "laresd"
version = "0.1.0"
edition = "2021"

[dependencies]
lares-core = { path = "../lares-core" }
lares-protocol = { path = "../lares-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
libc = "0.2"
